<resources>
  <string name="app_name">Transformers</string>

  <string name="autobot">Autobot</string>
  <string name="decepticon">Decepticon</string>
  
  <string name="name">Name</string>
  <string name="team">Team</string>
  <string name="strength">Strength</string>
  <string name="intelligence">Intelligence</string>
  <string name="speed">Speed</string>
  <string name="endurance">Endurance</string>
  <string name="rank">Rank</string>
  <string name="courage">Courage</string>
  <string name="firepower">Firepower</string>
  <string name="skill">Skill</string>

  <string name="stat">%1$s: %2$s</string>
  <string name="fight">Fight!</string>
  <string name="save">Save</string>
  <string name="delete">Delete</string>

  <string name="error_must_have_name">Your Transformer needs a name!</string>

  <string name="transformers_zero_state">You haven\'t created any Transformers yet</string>
  <string name="network_error">Network error</string>
  <string name="no_internet_connection">No internet connection</string>
  <string name="error_unknown">Error unknown</string>
  <string name="error_timeout">Error timeout</string>
</resources>