<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_button"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/first_keyline"
                android:inputType="textPersonName" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/first_keyline">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/first_keyline">

                    <TextView
                        style="@style/textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/strength" />

                    <SeekBar
                        android:id="@+id/sb_strength"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />

                    <TextView
                        style="@style/textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/intelligence" />

                    <SeekBar
                        android:id="@+id/sb_intelligence"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />

                    <TextView
                        style="@style/textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed" />

                    <SeekBar
                        android:id="@+id/sb_speed"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />

                    <TextView
                        style="@style/textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/endurance" />

                    <SeekBar
                        android:id="@+id/sb_endurance"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />

                    <TextView
                        style="@style/textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rank" />

                    <SeekBar
                        android:id="@+id/sb_rank"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />

                    <TextView
                        style="@style/textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/courage" />

                    <SeekBar
                        android:id="@+id/sb_courage"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />

                    <TextView
                        style="@style/textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firepower" />

                    <SeekBar
                        android:id="@+id/sb_firepower"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />

                    <TextView
                        style="@style/textBody"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skill" />

                    <SeekBar
                        android:id="@+id/sb_skill"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:max="10" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>